# everything-api

./: .dockerignore  .example.env  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: __init__.py  app_setup.py  mappers.py  router.py  service.py  settings.py  types.py
app/config/: constants.py  logger_config.py
app/dto/: http_response.py
tests/: conftest.py
tests/integration/: conftest.py  do_integration_tests.py
tests/testdoubles/: headers_dict_doubles.py  http_response_doubles.py  ollama_response_doubles.py  query_params_dict_doubles.py  query_params_doubles.py
tests/testutils/: random_data_generator.py
tests/unit/: mappers_unit_tests.py  service_unit_tests.py  settings_unit_tests.py
tests/unit/model/: http_response_unit_tests.py
